[package]
name = "rust-hackerrank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
rand = "0.8.5"
regex = "1.10.2"
rustc-serialize = "0.3.24"
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
text_io = "0.1.12"
time = "0.3.30"
